media-service/k8s-media.yaml
apiVersion: v1
kind: Service
metadata:
  name: media-svc
#  creationTimestamp: null
#  labels:
#    app: media-svc
spec:
  selector:
    app: media
  ports:
    - protocol: "TCP"
      port: 8084
      targetPort: 8084
#  type: NodePort
