media-service/k8s-gw-api.yaml
# https://istio.io/latest/docs/tasks/traffic-management/ingress/gateway-api/#automated-deployment
# kubectl apply -f https://github.com/kubernetes-sigs/gateway-api/releases/download/v1.0.0/standard-install.yaml

# kubectl -n djmz port-forward service/media-gateway-istio --address=0.0.0.0 8080:80

apiVersion: gateway.networking.k8s.io/v1beta1
kind: Gateway
metadata:
  name: media-gateway
  namespace: djmz
spec:
  gatewayClassName: gke-l7-global-external-managed
  #  addresses:
  #  - value: ingress.istio-gateways.svc.cluster.local
  #    type: Hostname
  listeners:
    - name: prod-web
      port: 80
      protocol: HTTP
      allowedRoutes:
        kinds:
          - kind: HTTPRoute
#      namespaces:
#        from: Selector
#        selector:
#          matchLabels:
#            expose-apps: "true"

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: media-route
  namespace: djmz
spec:
  parentRefs:
    - kind: Gateway
      name: media-gateway
      namespace: djmz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /api/media/*
    - backendRefs:
        - name: media-svc
          port: 8084

---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: auth-route
  namespace: djmz
spec:
  parentRefs:
    - kind: Gateway
      name: media-gateway
      namespace: djmz
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin/*
    - backendRefs:
        - name: keycloak-svc
          port: 8443

---
#apiVersion: v1
#kind: Service
#metadata:
#  name: port-fwd-gw
#  namespace: djmz
#spec:
#  type: NodePort
#  ports:
#    - port: 80
#      targetPort: 15021
#      nodePort: 32080
#  selector:
#    run: media-gateway-istio
